fix extra spacesand font-weight

--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -3,7 +3,6 @@
     font-weight: 400;
     font-style: normal;
     font-size: 18px;
-    font-weight: 500;
     line-height: 22px;
     margin: 0;
 }
